[fix] resposive buttons on mobile

--- a/index.css
+++ b/index.css
@@ -14,13 +14,13 @@ body {
   margin-right: auto;
 }
 
-.buttons {
+/* .buttons {
   width: 200px;
   margin-top: 2rem;
   margin-bottom: auto;
   margin-left: 1rem;
   margin-right: 1rem;
-}
+} */
 
 .log {
   width: 400px;
